--- a/dataengg/master_config.yml
+++ b/dataengg/master_config.yml
@@ -16,15 +16,40 @@ APP_PATHS:
   - &GOLD_COLLATERAL_STATUS          dbfs:/mnt/gold/collateral_status
 
 BRONZE_TO_SILVER:
-  CLIENTS:
-    SOURCE: *BRONZE_CLIENTS
-    TARGET: *SILVER_CLIENTS
-  COLLATERALS:
-    SOURCE: *BRONZE_COLLATERAL
-    TARGET: *SILVER_COLLATERAL
-  STOCKS:
-    SOURCE: *BRONZE_STOCKS
-    TARGET: *SILVER_STOCKS
+  SOURCES:
+    CLIENTS:
+      NAME:  "clients"
+      SOURCE: *BRONZE_CLIENTS
+      TARGET: *SILVER_CLIENTS
+    COLLATERALS:
+      NAME:  "collaterals"
+      SOURCE: *BRONZE_COLLATERAL
+      TARGET: *SILVER_COLLATERAL
+    STOCKS:
+      NAME:  "stocks"
+      SOURCE: *BRONZE_STOCKS
+      TARGET: *SILVER_STOCKS
+  DATAQUALITY:
+    RULES:
+      - RULE:
+          ruleno: 1
+          rulename: "NOT_NULL"
+          tablename: "clients"
+          columnname: "client_id"
+          values: ""
+      - RULE:
+          ruleno: 2
+          rulename: "CHECK"
+          tablename: "clients"
+          columnname: "income_type"
+          values: ['business', 'salaried']
+      - RULE:
+          ruleno: 3
+          rulename: "POSITIVE_VALUE"
+          tablename: "clients"
+          columnname: "income"
+          values: ""
+
 
 SILVER_TO_GOLD:
   COLLATERAL_STATUS:
